Add jwt and change customs to bcrypt
